# whiske-rs

./: .travis.yml  Cargo.toml
examples/: animation.rs  cube.rs  genmesh.rs  hairball.rs  input.rs  loading.rs  simple.rs  texture.rs
src/: lib.rs  material.rs  texture.rs
src/animation/: Cargo.toml
src/animation/src/: lib.rs
src/asset_bucket/: Cargo.toml  build.rs
src/asset_bucket/schema/: bucket.capnp
src/asset_bucket/src/: lib.rs
src/asset_bucket/tests/: test.rs
src/bounding/: Cargo.toml
src/bounding/src/: lib.rs
src/config/: Cargo.toml
src/config/src/: lib.rs
src/config_menu/: Cargo.toml
src/config_menu/src/: lib.rs
src/engine/: Cargo.toml
src/engine/src/: event.rs  lib.rs
src/graphics/: Cargo.toml
src/graphics/src/: lib.rs  material.rs  texture.rs  vertex.rs
src/graphics/tests/: tests.rs
src/hairball/: Cargo.toml
src/hairball/src/: lib.rs
src/name/: Cargo.toml
src/name/src/: lib.rs
src/no_clip/: Cargo.toml
src/no_clip/src/: lib.rs
src/obj_loader/: Cargo.toml
src/obj_loader/examples/: loading.rs
src/obj_loader/src/: lib.rs  wavefront_obj.rs
src/parent/: Cargo.toml
src/parent/src/: lib.rs
src/parent/tests/: parent.rs  test.rs
src/renderer/: Cargo.toml
src/renderer/src/: lib.rs  render_data.rs
src/scene/: Cargo.toml
src/scene/src/: lib.rs
src/std_graphics/: Cargo.toml
src/std_graphics/src/: lib.rs
src/system/: Cargo.toml
src/system/src/: lib.rs
src/transform/: Cargo.toml
src/transform/src/: lib.rs
tests/: graphics.rs  name.rs  parent.rs  scene.rs  test.rs  tests.rs  transform.rs
