[package]
name = "whiske-rs"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[dependencies]
glutin="*"
cgmath="*"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dependencies.entity]
git = "https://github.com/csherratt/entity.git"

[dependencies.whiske-rs-engine]
path = "src/engine"
version = "*"

[dependencies.whiske-rs-parent]
path = "src/parent"
version = "*"

[dependencies.whiske-rs-transform]
path = "src/transform"
version = "*"

[dependencies.whiske-rs-graphics]
path = "src/graphics"
version = "*"

[dependencies.whiske-rs-renderer]
path = "src/renderer"
version = "*"

[dependencies.whiske-rs-scene]
path = "src/scene"
version = "*"

[dependencies.whiske-rs-std_graphics]
path = "src/std_graphics"
version = "*"


