[package]
name = "whiske-rs"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[dependencies]
glfw="*"
cgmath="*"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-engine]
path = "src/engine"
version = "*"

[dependencies.whiske-rs-parent]
path = "src/parent"
version = "*"

[dependencies.whiske-rs-transform]
path = "src/transform"
version = "*"

[dependencies.whiske-rs-graphics]
path = "src/graphics"
version = "*"

[dependencies.whiske-rs-renderer]
path = "src/renderer"
version = "*"

[dependencies.whiske-rs-scene]
path = "src/scene"
version = "*"

[dependencies.whiske-rs-std_graphics]
path = "src/std_graphics"
version = "*"

[dependencies.whiske-rs-obj_loader]
path = "src/obj_loader"
version = "*"

[dependencies.whiske-rs-no_clip]
path = "src/no_clip"
version = "*"

[dependencies.whiske-rs-bounding]
path = "src/bounding"
version = "*"

[dependencies.whiske-rs-system]
path = "src/system"
version = "*"


[dev-dependencies]
time="*"
image="*"

[dev-dependencies.future_pulse]
git = "https://github.com/csherratt/future_pulse.git"


[features]
virtual_reality = ["whiske-rs-engine/virtual_reality",
                   "whiske-rs-renderer/virtual_reality"]