[package]
name = "whiske-rs-bounding"
version = "0.1.0"
authors = ["Slide-rs Developers"]

[lib]
name = "bounding"

[dependencies]
cgmath="*"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.future_pulse]
git = "https://github.com/slide-rs/future_pulse.git"

[dependencies.lease]
git = "https://github.com/csherratt/lease.git"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-graphics]
path = "../graphics"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.shared_future]
git = "https://github.com/csherratt/shared_future.git"
