[package]
name = "whiske-rs-config_menu"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="config_menu"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.ordered_vec]
git = "https://github.com/csherratt/ordered_vec.git"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.whiske-rs-name]
path = "../name"

[dependencies.whiske-rs-config]
path = "../config"

[dependencies.whiske-rs-parent]
path = "../parent"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.whiske-rs-transform]
path = "../transform"

[dependencies.whiske-rs-renderer]
path = "../renderer"
