[package]
name = "whiske-rs-engine"
version = "0.1.0"
authors = ["Slide-rs Developers"]

[lib]
name = "engine"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dependencies]
gfx = "*"
gfx_device_gl = "*"
glfw = "*"
gfx_window_glfw = "*"
