[package]
name = "whiske-rs-graphics"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="graphics"

[dependencies]
pulse="*"
gfx="*"
image="*"

[dependencies.whiske-rs-parent]
path = "../parent"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.future_pulse]
git = "https://github.com/slide-rs/future_pulse.git"

[dependencies.lease]
git = "https://github.com/csherratt/lease.git"

[dependencies.shared_future]
git = "https://github.com/csherratt/shared_future.git"

