[package]
name = "whiske-rs-obj_loader"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="obj_loader"

[dependencies]
genmesh="*"
obj="*"
pulse="*"
image="*"

[dev-dependencies]
cgmath="*"
time="*"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.whiske-rs-graphics]
path = "../graphics"

[dependencies.future_pulse]
git = "https://github.com/slide-rs/future_pulse.git"

[dependencies.gfx_mesh]
git = "https://github.com/csherratt/gfx_mesh.git"

[dependencies.collada]
git = "https://github.com/PistonDevelopers/piston_collada.git"

[dev-dependencies.whiske-rs-renderer]
path = "../renderer"

[dev-dependencies.whiske-rs-transform]
path = "../transform"

[dev-dependencies.whiske-rs-scene]
path = "../scene"

[dev-dependencies.whiske-rs-parent]
path = "../parent"