[package]
name = "whiske-rs-parent"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="parent"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dependencies.whiske-rs-system]
path = "../system"
