[package]
name = "whiske-rs-parent"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="parent"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.whiske-rs-system]
path = "../system"

