[package]
name = "whiske-rs-renderer"
version = "0.1.0"
authors = ["Slide-rs Developers"]

[lib]
name = "renderer"

[dependencies]
pulse="*"
gfx="*"
gfx_device_gl="*"
cgmath="*"
draw_queue="*"
gfx_phase="0.4"
gfx_scene="0.4"
gfx_pipeline="0.3"
gfx_text="=0.2.0"
gfx_debug_draw="*"
image="*"

[dependencies.entity]
git = "https://github.com/csherratt/entity.git"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.whiske-rs-transform]
path = "../transform"

[dependencies.whiske-rs-graphics]
path = "../graphics"

[dependencies.whiske-rs-scene]
path = "../scene"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dev-dependencies]
time="*"

[dev-dependencies.future_pulse]
git = "https://github.com/csherratt/future_pulse.git"

[dev-dependencies.parent]
git = "https://github.com/csherratt/parent.git"

[dev-dependencies.no_clip]
git = "https://github.com/csherratt/no_clip.git"

[dev-dependencies.std_graphics]
path = "../std_graphics"
