[package]
name = "whiske-rs-renderer"
version = "0.1.0"
authors = ["Slide-rs Developers"]

[lib]
name = "renderer"

[dependencies]
pulse="*"
gfx="*"
gfx_device_gl="*"
cgmath="*"
draw_queue="*"
gfx_phase="0.4"
gfx_scene="0.4"
gfx_text="*"
image="*"

[dependencies.entity]
git = "https://github.com/csherratt/entity.git"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.whiske-rs-transform]
path = "../transform"

[dependencies.whiske-rs-graphics]
path = "../graphics"

[dependencies.whiske-rs-scene]
path = "../scene"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dependencies.vr]
git = "https://github.com/csherratt/vr-rs.git"
branch = "openvr"

[dependencies.gfx_vr]
git = "https://github.com/csherratt/gfx_vr.git"

[dependencies.gfx_pipeline]
git = "https://github.com/csherratt/gfx_pipeline.git"
