[package]
name = "whiske-rs-renderer"
version = "0.1.0"
authors = ["Slide-rs Developers"]

[lib]
name = "renderer"

[dependencies]
pulse="*"
gfx="*"
gfx_device_gl="*"
cgmath="*"
draw_queue="*"
gfx_phase="0.4"
gfx_scene="0.4"
gfx_text="*"
image="*"
hprof="*"
genmesh="*"

[dependencies.gfx_scene_aabb_debug]
git = "https://github.com/csherratt/gfx_scene_aabb_debug"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.whiske-rs-transform]
path = "../transform"

[dependencies.whiske-rs-graphics]
path = "../graphics"

[dependencies.whiske-rs-scene]
path = "../scene"

[dependencies.whiske-rs-bounding]
path = "../bounding"

[dependencies.whiske-rs-name]
path = "../name"

[dependencies.whiske-rs-config]
path = "../config"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.gfx_pipeline]
git = "https://github.com/csherratt/gfx_pipeline.git"

[dependencies.lease]
git = "https://github.com/csherratt/lease.git"

[dependencies.shared_future]
git = "https://github.com/csherratt/shared_future.git"

[dependencies.whiske-rs-system]
path = "../system"

[dependencies.vr]
git = "https://github.com/csherratt/vr-rs.git"
optional = true

[dependencies.gfx_vr]
git = "https://github.com/csherratt/gfx_vr.git"
optional = true

[features]
default = []
virtual_reality = ["gfx_vr", "vr"]