[package]
name = "whiske-rs-scene"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="scene"

[dependencies]
pulse = "*"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs"

[dependencies.entity]
git = "https://github.com/csherratt/entity"

[dependencies.whiske-rs-parent]
path = "../parent"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm"
