[package]
name = "whiske-rs-scene"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="scene"

[dependencies]
pulse = "*"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-engine]
path = "../engine"

[dependencies.whiske-rs-parent]
path = "../parent"

[dependencies.whiske-rs-system]
path = "../system"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm"

[dependencies.lease]
git = "https://github.com/csherratt/lease.git"

[dependencies.shared_future]
git = "https://github.com/csherratt/shared_future.git"

