[package]
name = "whiske-rs-std_graphics"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="std_graphics"

[dependencies]
cgmath="*"
genmesh="*"
pulse="*"
image="*"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-graphics]
path = "../graphics"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dependencies.future_pulse]
git = "https://github.com/slide-rs/future_pulse.git"
