[package]
name = "whiske-rs-system"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="system"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm"

[dependencies.lease]
git = "https://github.com/csherratt/lease.git"

[dependencies.shared_future]
git = "https://github.com/csherratt/shared_future.git"
