[package]
name = "whiske-rs-transform"
version = "0.1.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name="transform"

[dependencies]
pulse="*"
cgmath="*"

[dependencies.entity]
git = "https://github.com/whiske-rs/entity.git"

[dependencies.whiske-rs-parent]
path = "../parent"

[dependencies.whiske-rs-system]
path = "../system"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm.git"

[dependencies.fibe]
git = "https://github.com/slide-rs/fibe-rs.git"

[dependencies.ordered_vec]
git = "https://github.com/csherratt/ordered_vec.git"
